{
  "yes": "SI",
  "no": "NO",
  "films": "Películas",
  "createFilm": "Crear película",
  "createdFilm": "Película creada",
  "creatingFilmError": "Error al crear la película",
  "deleteFilm": "Eliminar película",
  "askDeletingFilm": "¿Está seguro que desea eliminar la película?",
  "deletedFilm": "Película eliminada",
  "deletingFilmError": "Error al eliminar la película",
  "editFilm": "Editar película",
  "editedFilm": "Película modificada",
  "editingFilmError": "Error al modificar la película",
  "title": "Título",
  "insertTheTitle": "Introduzca el título",
...
